# cryophile

./: .editorconfig  .pre-commit-config.yaml  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: build.yml  sec.yml
src/: aws.rs  backup.rs  cli.rs  constants.rs  encoder.rs  freeze.rs  lib.rs  main.rs  openpgp.rs  recipient.rs  restore.rs  split.rs  thaw.rs
src/cli/: constants.rs  error.rs  mod.rs  parse.rs  result.rs  subcommand.rs
src/command/: backup.rs  freeze.rs  mod.rs  restore.rs  thaw.rs
src/compression/: compression_type.rs  decompressor.rs  encoder.rs  mod.rs
src/config/: configfile.rs  mod.rs
src/core/: aws.rs  backup_id.rs  cat.rs  channel.rs  constants.rs  encoder.rs  fragment.rs  mod.rs  notify.rs  path.rs  split.rs  watch.rs
src/crypto/: age.rs  mod.rs  openpgp.rs
tests/: integration_test.rs
