[package]
name = "cryophile"
version = "0.0.0"
edition = "2021"
rust-version = "1.81"  # MSRV
authors = ["Thomas Krennwallner <tk@postsubmeta.net>"]
description = "Backup and restore tool for remote off-site backups"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tkren/cryophile"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
age = ["dep:age"]

[dependencies]
age = { version = "~0.10.0", features = ["ssh"], optional = true }
anyhow = { version = "~1.0.86", features = ["backtrace"] }
aws-config = "~1.5.1"
aws-sdk-s3 = "~1.34.0"
aws-types = "~1.3.1"
clap = { version = "~4.5.6", features = ["cargo", "derive"] }
chrono = "~0.4.38"
env_logger = "~0.11.3"
futures = "~0.3.30"
log = "~0.4.21"
lz4_flex = "~0.11.3"
notify = "~6.1.1"
nix = { version = "~0.29.0", features = ["fs"] }
parse-size = "~1.0.0"
regex = "~1.10.5"
rpassword = "~7.3.1"
serde = "~1.0.203"
serde_derive = "~1.0.203"
sequoia-openpgp = "~1.20.0"
tempfile = "~3.10.1"
thiserror = "~1.0.61"
thread_io = "~0.3.1"
tokio = { version = "~1.38.0", features = ["full"] }
toml = "~0.8.14"
tracing = { version = "~0.1.40", features = ["log"] }
tracing-subscriber = "~0.3.18"
ulid = { version = "~1.1.2", features = ["std"] }
uuid = { version = "~1.8.0", features = ["serde"] }
xdg = "~2.5.2"
walkdir = "~2.5.0"
zstd = "~0.13.1"

[dev-dependencies]
tempfile = "~3.10.1"

[profile.release]
strip = "debuginfo"
