[package]
name = "cryophile"
version = "0.0.0"
edition = "2021"
authors = ["Thomas Krennwallner <tk@postsubmeta.net>"]
description = "Backup and restore tool for remote off-site backups"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tkren/cryophile"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# ignore age feature for now
#age = ["dep:age"]

[dependencies]
#age = { version = "~0.9.2", features = ["ssh"], optional = true }
anyhow = { version = "~1.0.81", features = ["backtrace"] }
aws-config = "~1.1.8"
aws-sdk-s3 = "~1.19.1"
aws-types = "~1.1.8"
clap = { version = "~4.5.3", features = ["cargo", "derive"] }
chrono = "~0.4.35"
env_logger = "~0.11.3"
futures = "~0.3.30"
log = "~0.4.21"
lz4_flex = "~0.11.2"
notify = "~6.1.1"
nix = { version = "~0.28.0", features = ["fs"] }
parse-size = "~1.0.0"
regex = "~1.10.3"
rpassword = "~7.3.1"
serde = "~1.0.197"
serde_derive = "~1.0.197"
sequoia-openpgp = "~1.19.0"
tempfile = "~3.10.1"
thiserror = "~1.0.58"
thread_io = "~0.3.1"
tokio = { version = "~1.36.0", features = ["full"] }
toml = "~0.8.11"
tracing = { version = "~0.1.40", features = ["log"] }
tracing-subscriber = "~0.3.18"
ulid = { version = "~1.1.2", features = ["std"] }
uuid = { version = "~1.7.0", features = ["serde"] }
xdg = "~2.5.2"
walkdir = "~2.5.0"
zstd = "~0.13.0"

[dev-dependencies]
tempfile = "~3.10.1"

[profile.release]
strip = "debuginfo"
