[package]
name = "cryophile"
version = "0.0.0"
edition = "2021"
rust-version = "1.82"  # MSRV
authors = ["Thomas Krennwallner <tk@postsubmeta.net>"]
description = "Backup and restore tool for remote off-site backups"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tkren/cryophile"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
age = ["dep:age"]

[dependencies]
age = { version = "~0.10.0", features = ["ssh"], optional = true }
anyhow = { version = "~1.0.86", features = ["backtrace"] }
aws-config = "~1.5.4"
aws-sdk-s3 = "~1.42.0"
aws-types = "~1.3.3"
clap = { version = "~4.5.13", features = ["cargo", "derive"] }
chrono = "~0.4.38"
env_logger = "~0.11.5"
futures = "~0.3.30"
log = "~0.4.22"
lz4_flex = "~0.11.3"
notify = "~6.1.1"
nix = { version = "~0.29.0", features = ["fs"] }
parse-size = "~1.0.0"
regex = "~1.10.6"
rpassword = "~7.3.1"
serde = "~1.0.205"
serde_derive = "~1.0.205"
sequoia-openpgp = "~1.21.2"
tempfile = "~3.12.0"
thiserror = "~1.0.63"
thread_io = "~0.3.1"
tokio = { version = "~1.39.2", features = ["full"] }
toml = "~0.8.19"
tracing = { version = "~0.1.40", features = ["log"] }
tracing-subscriber = "~0.3.18"
ulid = { version = "~1.1.3", features = ["std"] }
uuid = { version = "~1.10.0", features = ["serde"] }
xdg = "~2.5.2"
walkdir = "~2.5.0"
zstd = "~0.13.2"

[dev-dependencies]
tempfile = "~3.12.0"

[profile.release]
strip = "debuginfo"
